--- a/_posts/2021-05-22-fashion210521.md
+++ b/_posts/2021-05-22-fashion210521.md
@@ -12,7 +12,7 @@ hidden: false
 
 Una semana mas [Kaiyoko Star](https://twitter.com/kaiyokostar){:target="_blank"} ha publicado la solucion para el Fashion Report, la cual podeis veir a continuacion.
 
-![Fashion Report 173](/assets/images/fashion/freport_173.jpg)
+![Fashion Report 173]({{ site.baseurl }}//assets/images/fashion/freport_173.jpg)
 
 Para hacer los 80 puntos y ganar 60,000 MGP necesitareis :
 
@@ -28,4 +28,4 @@ Sino teneis desbloqueados el fashion report lo podeis hacer mediante la quest <a
 
 Por ultimo recordar que este año tenemos de nuevo el evento del Final Fantasy XV con el que podeis conseguir el coche Regalia Type-G por 2000,000 MGP.
 
-![Regalia Type-G](/assets/images/fashion/ffxivregalia.jpg)
+![Regalia Type-G]({{ site.baseurl }}//assets/images/fashion/ffxivregalia.jpg)
