--- a/_posts/2021-05-21-traducir.md
+++ b/_posts/2021-05-21-traducir.md
@@ -36,4 +36,4 @@ Ya, tras esto, en vuestro juego os saldrá más o menos la ventana que os voy a 
 
 ![Ventana de tataru sobre el juego]({{ site.baseurl }}/assets/images/articles/tataru_7.jpg)
 
-Espero que os haya ayudado el hilo para conseguir traducir el Final Fantasy XIV al Español y que disfrutéis aún más de este fantástico MMo. Un saludo! 
+Espero que os haya ayudado el hilo para conseguir traducir el Final Fantasy XIV al Español y que disfrutéis aún más de este fantástico MMO. Un saludo! 
