--- a/_posts/2021-05-21-traducir.md
+++ b/_posts/2021-05-21-traducir.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title:  "Traducir los diálogos y cinemáticas"
-author: jony
+author: sharn
 categories: [ herramientas ]
 tags: [nuevos jugadores, herramientas]
 image: assets/images/articles/tataru_img.png
