--- a/_posts/2021-05-21-traducir.md
+++ b/_posts/2021-05-21-traducir.md
@@ -12,11 +12,11 @@ hidden: false
 
 En este hilo voy a explicar como poder traducir los diálogos y las cinemáticas de Final Fantasy XIV Online al Español (o cualquier idioma) que queráis.
 
-Para que os hagáis una idea, nuestra idea es que vamos a superponer una pantalla encima de nuestro juego. Para esto, el juego lo vamos a poner el juego en Borderless Windowed (Venta completa maximizada) 
+Para que os hagáis una idea, lo que vamos a hacer es superponer una pantalla encima de nuestro juego. Para esto, tenemos que configurarlo en Borderless Windowed (Venta completa maximizada) 
 
 ![Venta completa maximizada]({{ site.baseurl }}/assets/images/articles/tataru_1.jpg)
 
-El siguiente paso es que vamos a permitir ver en el Chat los diálogos de los NPCs. Lo que hacemos es que vamos a Character Configuration y en la pestaña General, nos vamos a Log Windows Settings, bajamos y clickeamos sobre General. 
+El siguiente paso es que vamos a permitir ver en el Chat los diálogos de los NPCs. Nos vamos al menú Character Configuration y en la pestaña General, nos vamos a Log Windows Settings, bajamos y clickeamos sobre General. 
 
 ![Opciones del chat]({{ site.baseurl }}/assets/images/articles/tataru_2.jpg)
 
@@ -26,13 +26,13 @@ Se nos abrirá una ventana que tenemos que buscar las opciones: NPC Dialogue y N
 
 Ya hemos hecho los cambios necesarios dentro del juego. Ahora vamos a bajar el programa de traducción. Se llama [TataruHelper](https://github.com/NightlyRevenger/TataruHelper){:target="_blank"} y lo podeis bajar desde [este enlance](https://github.com/NightlyRevenger/TataruHelper/releases/latest/download/Setup.exe){:target="_blank"}. 
 
-Este programa nos va a dar muchas opciones y nos va a crear una ventanita que irá traduciendo las Strings. Se puede cambiar el fondo, cambiar el tamaño, etc. Os dejo unas imágenes con mi propia configuración. 
+Este programa nos va a dar muchas opciones y nos va a crear una ventanita que irá traduciendo las Strings (líneas de texto). Se puede cambiar el fondo, cambiar el tamaño, etc. Os dejo unas imágenes con mi propia configuración. 
 
 ![Opciones tataru 1]({{ site.baseurl }}/assets/images/articles/tataru_4.png)
 ![Opciones tataru 1]({{ site.baseurl }}/assets/images/articles/tataru_5.png)
 ![Opciones tataru 1]({{ site.baseurl }}/assets/images/articles/tataru_6.png)
 
-Ya, tras esto, en vuestro juego os saldrá más o menos la ventana que os voy a enseñar en la siguiente Screen. Y veréis como se traducen, en esa ventana, las distintas Strings que vayan apareciendo en el juego. Este programa no traduce Skills ni interface. 
+Ya, tras esto, en vuestro juego os saldrá más o menos la ventana que os voy a enseñar en la siguiente Screen. Y veréis como se traducen, en esa ventana, las distintas Strings que vayan apareciendo en el juego. Este programa no traduce skills ni interface. 
 
 ![Ventana de tataru sobre el juego]({{ site.baseurl }}/assets/images/articles/tataru_7.jpg)
 
