--- a/_posts/2021-05-21-traducir.md
+++ b/_posts/2021-05-21-traducir.md
@@ -10,7 +10,7 @@ featured: true
 hidden: false
 ---
 
-En este hilo voy a explicar como poder traducir los diálogos y las cinemáticas de Final Fantasy XIV Online al Español (o cualquier idioma) que queráis.
+En este artículo voy a explicar como poder traducir los diálogos y las cinemáticas de Final Fantasy XIV Online al Español (o cualquier idioma) que queráis.
 
 Para que os hagáis una idea, lo que vamos a hacer es superponer una pantalla encima de nuestro juego. Para esto, tenemos que configurarlo en Borderless Windowed (Venta completa maximizada) 
 
