--- a/_posts/2021-05-25-resumen-5-55.md
+++ b/_posts/2021-05-25-resumen-5-55.md
@@ -6,7 +6,7 @@ categories: [ parches ]
 tags: [parches, shadowbringers, "5.55"]
 image: assets/images/articles/noticias/parche5_55/5_55.png
 description: "En este hilo vamos a resumir las principales partes de las notas del parche 5.55."
-featured: false
+featured: true
 hidden: false
 ---
 
