--- a/_posts/2021-05-21-traducir.md
+++ b/_posts/2021-05-21-traducir.md
@@ -24,7 +24,7 @@ Se nos abrirá una ventana que tenemos que buscar las opciones: NPC Dialogue y N
 
 ![Dialogos de NPC]({{ site.baseurl }}/assets/images/articles/guias/traduccion/tataru_3.jpg)
 
-Ya hemos hecho los cambios necesarios dentro del juego. Ahora vamos a bajar el programa de traducción. Se llama [TataruHelper](https://github.com/NightlyRevenger/TataruHelper){:target="_blank"} y lo podeis bajar desde [este enlance](https://github.com/NightlyRevenger/TataruHelper/releases/latest/download/Setup.exe){:target="_blank"}. 
+Ya hemos hecho los cambios necesarios dentro del juego. Ahora vamos a bajar el programa de traducción. Se llama [TataruHelper](https://github.com/NightlyRevenger/TataruHelper){:target="_blank"} y lo podeis bajar desde [este enlance](https://github.com/NightlyRevenger/TataruHelper/releases/latest/download/Setup.exe){:target="_blank"}. Es importante, para no tener problemas, ejecutar el TataruHelper en **modo Administrador**.
 
 Este programa nos va a dar muchas opciones y nos va a crear una ventanita que irá traduciendo las Strings (líneas de texto). Se puede cambiar el fondo, cambiar el tamaño, etc. Os dejo unas imágenes con mi propia configuración. 
 
