guia tipo de instancias

--- a/_posts/2021-05-28-fashion210528.md
+++ b/_posts/2021-05-28-fashion210528.md
@@ -6,7 +6,7 @@ categories: [ gold saucer ]
 tags: [gold saucer, eventos, semanales]
 image: assets/images/articles/fashion/fashion210521/masked_rose.jpg
 description: "Solucion del Fashion Report del 28 Mayo 2021."
-featured: true
+featured: false
 hidden: false
 ---
 
