--- a/_posts/2021-06-09-chocobo.md
+++ b/_posts/2021-06-09-chocobo.md
@@ -24,9 +24,14 @@ Tras haber conseguido el objeto, la misión nos mandará a un NPC. Le entregamos
 
 ![nombre](/assets/images/articles/guias/chocobo/nombre.jpg)
 
+El nombre del chocobo se puede cambiar siempre que queramos. Hablando con el *Chocobokeep* nos dará la opción de renombrar a nuestro chocobo.
+
+![renombrar](/assets/images/articles/guias/chocobo/renombrar.jpg)
+
 Ahora ya terminamos la misión y nos dará el artículo [Chocobo Whistle](https://na.finalfantasyxiv.com/lodestone/playguide/db/item/85f78cb2a87/){:target="_blank" class="eorzeadb_link"} que tendremos que usarlo. Al hacerlo se nos añadirá nuestro chocobo como montura. Este icono lo podremos arrastrar hacia un botón de las barras para tener acceso rápido.
 
 ![montura](/assets/images/articles/guias/chocobo/montura.jpg)
+
 
 ### Chocobo como compañero de batalla.
 
@@ -60,3 +65,7 @@ Por último, en la pestaña *Appearence* del menú Companion podrás cambiar la 
 Para cambiar la armadura del chocobo hay que conseguir unos objetos denominados **Bardas** (*Bardings* en inglés). Estos objetos se colocan en la cabeza, cuerpo y piernas del chocobo. Podrás conseguir las bardas mediante misiones, fabricación de objetos, logros, etc. Las bardas están diseñadas con una temática relacionada al contenido con la que la consigues. Por ejemplo, si consigues la barda con objetos que se obtienen en un jefe ésta tendrá una apariencia relacionada con el jefe.
 
 ![barda](/assets/images/articles/guias/chocobo/barda.jpg)
+
+Cuando ya tengamos desbloqueado nuestro compañero de batalla, tendremos acceso a la opción del menú *Character* de **Chocobo Saddlebag** (Ctrl+Shift+i por defecto). Estas alforjas nos dan 70 huecos más de inventario que podemos usar para guardar lo que nosotros queramos. Estas alforjas se puede abrir en todas las zonas, incluso cuando no podamos sacar a nuestro compañero de batalla.
+
+![alforjas](/assets/images/articles/guias/chocobo/alforjas.jpg)
