cambio de destacados

--- a/_posts/2021-05-21-traducir.md
+++ b/_posts/2021-05-21-traducir.md
@@ -6,7 +6,7 @@ categories: [ herramientas ]
 tags: [nuevos jugadores, herramientas]
 image: assets/images/articles/guias/traduccion/tataru_img.png
 description: "En este hilo voy a explicar como poder traducir los diálogos y las cinemáticas de Final Fantasy XIV Online al Español (o cualquier idioma) que queráis."
-featured: true
+featured: false
 hidden: false
 ---
 
