edicion guia traduccion

--- a/_posts/2021-05-21-traducir.md
+++ b/_posts/2021-05-21-traducir.md
@@ -1,9 +1,9 @@
 ---
 layout: post
-title:  "Traducir los diálogos y cinemáticas"
+title:  "Traducir los diálogos y cinemáticas con Tataru Helper."
 author: sharn
 categories: [ herramientas ]
-tags: [nuevos jugadores, herramientas]
+tags: [nuevos jugadores, herramientas, tataru, traduccir, traducción]
 image: assets/images/articles/guias/traduccion/tataru_img.png
 description: "En este hilo voy a explicar como poder traducir los diálogos y las cinemáticas de Final Fantasy XIV Online al Español (o cualquier idioma) que queráis."
 featured: false
@@ -12,28 +12,36 @@ hidden: false
 
 En este artículo voy a explicar como poder traducir los diálogos y las cinemáticas de Final Fantasy XIV Online al Español (o cualquier idioma) que queráis.
 
-Para que os hagáis una idea, lo que vamos a hacer es superponer una pantalla encima de nuestro juego. Para esto, tenemos que configurarlo en Borderless Windowed (Venta completa maximizada) 
+Para que os hagáis una idea, lo que vamos a hacer es superponer una pantalla encima de nuestro juego. Para esto, tenemos que configurarlo en **Borderless Windowed** (Venta completa maximizada).
 
-![Venta completa maximizada]({{ site.baseurl }}/assets/images/articles/guias/traduccion/tataru_1.jpg)
+<p align="center"><img src="/assets/images/articles/guias/traduccion/tataru_1.jpg"></p>
 
-El siguiente paso es que vamos a permitir ver en el Chat los diálogos de los NPCs. Nos vamos al menú Character Configuration y en la pestaña General, nos vamos a Log Windows Settings, bajamos y clickeamos sobre General. 
+El siguiente paso es que vamos a permitir ver en el Chat los diálogos de los NPCs. Nos vamos al menú **Character Configuration** y en la pestaña **General**, abajo nos encontramos la *familia* **Log Filters**. Aquí podemos configurar las ventañas del chat que tengamos creadas. Vamos a editar la pestaña de chat **General** (clickeando sobre ella).
 
-![Opciones del chat]({{ site.baseurl }}/assets/images/articles/guias/traduccion/tataru_2.jpg)
+<p align="center"><img src="/assets/images/articles/guias/traduccion/tataru_2.jpg"></p>
 
-Se nos abrirá una ventana que tenemos que buscar las opciones: NPC Dialogue y NPC Dialogue (Announcemets) Las activamos las dos. 
+Se nos abrirá una ventana que tenemos que buscar las opciones: **NPC Dialogue** y **NPC Dialogue (Announcemets)**. Las activamos las dos. 
 
-![Dialogos de NPC]({{ site.baseurl }}/assets/images/articles/guias/traduccion/tataru_3.jpg)
+<p align="center"><img src="/assets/images/articles/guias/traduccion/tataru_3.jpg"></p>
 
 Ya hemos hecho los cambios necesarios dentro del juego. Ahora vamos a bajar el programa de traducción. Se llama [TataruHelper](https://github.com/NightlyRevenger/TataruHelper){:target="_blank"} y lo podeis bajar desde [este enlance](https://github.com/NightlyRevenger/TataruHelper/releases/latest/download/Setup.exe){:target="_blank"}. Es importante, para no tener problemas, ejecutar el TataruHelper en **modo Administrador**.
 
-Este programa nos va a dar muchas opciones y nos va a crear una ventanita que irá traduciendo las Strings (líneas de texto). Se puede cambiar el fondo, cambiar el tamaño, etc. Os dejo unas imágenes con mi propia configuración. 
+Este programa nos va a dar muchas opciones y nos va a crear una ventanita que irá traduciendo las *Líneas de texto*. (líneas de texto). Se puede cambiar el fondo, cambiar el tamaño, etc. Os dejo unas imágenes con mi propia configuración. 
 
-![Opciones tataru 1]({{ site.baseurl }}/assets/images/articles/guias/traduccion/tataru_4.png)
-![Opciones tataru 1]({{ site.baseurl }}/assets/images/articles/guias/traduccion/tataru_5.png)
-![Opciones tataru 1]({{ site.baseurl }}/assets/images/articles/guias/traduccion/tataru_6.png)
+En la primera pestaña de configuración podremos cambiar el tamaño de la fuente y el fondo de la ventana del **Tataru Helper** dentro del juego. Yo, pongo el fondo negro, pero es una decisión totalmente personal.
 
-Ya, tras esto, en vuestro juego os saldrá más o menos la ventana que os voy a enseñar en la siguiente Screen. Y veréis como se traducen, en esa ventana, las distintas Strings que vayan apareciendo en el juego. Este programa no traduce skills ni interface. 
+<p align="center"><img src="/assets/images/articles/guias/traduccion/tataru_4.png"></p>
+
+En la siguiente pestaña de configuración, yo (personalmente) he quitado la opción de que me muestre traducidas las líneas de sistema. Para eso, deshabilitamos la opción *System* que está en el listado de la izquierda. Aquí es donde tendrás que elegir el idioma al que quieres traducir las líneas de texto de **Final Fantasy XIV** con el desplegable *Traducir a*.
+
+<p align="center"><img src="/assets/images/articles/guias/traduccion/tataru_5.png"></p>
+
+En la útlima pestaña de configuración tienes que configurar el tamaño y la posición de la ventana. La ventana podrás arrastrala y hacerla más grande o más pequeña si te acercas a las esquinas de la pestaña del **Tataru Helper** dentro del juego. Una vez que tengas la ventana del tamaño que quieras y en la posición que te guste, tienes que activar la opción *Click a través*. La opción *Auto Hide* sirve para que la ventana se te oculte tras unos segundos. Si activas esta opción, recomiendo poner entre 10 y 15 el valor de *Auto Hide*.
+
+<p align="center"><img src="/assets/images/articles/guias/traduccion/tataru_6.png"></p>
+
+Ya, tras esto, en vuestro juego os saldrá más o menos la ventana que os voy a enseñar en la siguiente *Screen*. Y veréis como se traducen, en esa ventana, las distintas líneas de texto que vayan apareciendo en el juego. Este programa no traduce skills ni interface. 
 
 ![Ventana de tataru sobre el juego]({{ site.baseurl }}/assets/images/articles/guias/traduccion/tataru_7.jpg)
 
-Espero que os haya ayudado el hilo para conseguir traducir el Final Fantasy XIV al Español y que disfrutéis aún más de este fantástico MMO. Un saludo! 
+Espero que os haya ayudado el hilo para conseguir traducir el Final Fantasy XIV al Español y que disfrutéis aún más de este fantástico MMO. !Un saludo! 
