--- a/_posts/2021-06-09-chocobo.md
+++ b/_posts/2021-06-09-chocobo.md
@@ -5,7 +5,7 @@ author: sharn
 categories: [ guias ]
 tags: [nuevos jugadores, guias, chocobo]
 image: assets/images/articles/guias/chocobo/portadachocobo.jpg
-description: "Como y cuando desbloquear a tu chocobo como montura y como compañero de batalla."
+description: "Cómo y cuándo desbloquear a tu chocobo como montura y como compañero de batalla."
 featured: false
 hidden: false
 ---
@@ -18,20 +18,19 @@ Tras haber llegado a nivel 20 de la línea de misiones principales y haberte [un
 
 Para completar la misión lo primero que debemos hacer es comprar un artículo al Oficial *Quatermaster* de nuestra Gran Compañía llamado *Chocobo Issuance*. Este artículo esta en la pestaña *Materiel* y es distinto dependiendo de la Gran Compañía a la que nos hayamos unido. Este artículo cuesta 200 Sellos de la compañía. En la guía de la [Gran Compañía](/guia-facciones/){:target="_blank"}. Los más rapido para conseguir estos 200 primeros sellos es completar la misión que te da el oficial de la Gran Compañía nada más unirte a ellos.
 
-![chocoboissuance](/assets/images/articles/guias/chocobo/chocoboissuance.jpg)
+<p align="center"><img src="/assets/images/articles/guias/chocobo/chocoboissuance.jpg"></p>
 
 Tras haber conseguido el objeto, la misión nos mandará a un NPC. Le entregamos el objeto y éste nos entragará nuestro chocobo con accesorios y motivos de la Gran Compañía que hayamos elegido. Entonces, tendremos que darle un nombre a nuestro chocobo.
 
-![nombre](/assets/images/articles/guias/chocobo/nombre.jpg)
+<p align="center"><img src="/assets/images/articles/guias/chocobo/nombre.jpg"></p>
 
 El nombre del chocobo se puede cambiar siempre que queramos. Hablando con el *Chocobokeep* nos dará la opción de renombrar a nuestro chocobo.
 
-![renombrar](/assets/images/articles/guias/chocobo/renombrar.jpg)
+<p align="center"><img src="/assets/images/articles/guias/chocobo/renombrar.jpg"></p>
 
 Ahora ya terminamos la misión y nos dará el artículo [Chocobo Whistle](https://na.finalfantasyxiv.com/lodestone/playguide/db/item/85f78cb2a87/){:target="_blank" class="eorzeadb_link"} que tendremos que usarlo. Al hacerlo se nos añadirá nuestro chocobo como montura. Este icono lo podremos arrastrar hacia un botón de las barras para tener acceso rápido.
 
-![montura](/assets/images/articles/guias/chocobo/montura.jpg)
-
+<p align="center"><img src="/assets/images/articles/guias/chocobo/montura.jpg"></p>
 
 ### Chocobo como compañero de batalla.
 
@@ -39,7 +38,7 @@ Cuando llegues a nivel 30 de la Misión Principal, **Docette** (South Shroud X: 
 
 Como te enseñan a hacerlo en la misión, para invocar al chocobo tendrás que usar [Gysahl Greens](https://na.finalfantasyxiv.com/lodestone/playguide/db/item/eeca86f98cc/){:target="_blank" class="eorzeadb_link"}. Tras usarlo el chocobo estará contigo durante 30 min y podrás usar 2 *Gyshal Greens* para que esté 1h en total (las *Gyshal Greens* pueden ser arrastradas hasta sition en la barra de botones y agilizar el proceso de invocación del chocobo). Este tiempo no avanza si estas en montura, has entrado en Dutys de las misiones, haces mazmorras, etc. Conforme el chocobo vaya matando enemigos contigo, éste irá ganando experiencia y subiendo de nivel. Este nivel lo puedes comprobar en el menú Companion que está en el menú rojo de Character.
 
-![companion](/assets/images/articles/guias/chocobo/companion.jpg)
+<p align="center"><img src="/assets/images/articles/guias/chocobo/companion.jpg"></p>
 
 Cuando llegues a nivel 10, para seguir subiendo de nivel necestiarás dar a tu chocobo una [Thavnairian Onion](https://eu.finalfantasyxiv.com/lodestone/playguide/db/item/cd8f0584d92/){:target="_blank" class="eorzeadb_link"} por cada nivel que quieras subir. Estas cebollas se pueden cultivar en jardines de tu casa o comprarlas en la subasta (*Marquet board* en inglés). El nivel máximo al que llegará tu chocobo es nivel 20.
 
@@ -56,16 +55,16 @@ Cuando el chocobo usa el establo, éste se ensucia. Mientras que esté sucio no 
 
 Cada vez que el chocobo sube de nivel consigue puntos de habilidades que podrás administrar como tú quieras especializando así a tu chocobo. Estos puntos están distribuidos en 3 familias: *Defensor*, *Sanador* o *Atacante*. Cuando llegues a nivel 10 del nivel del chocobo, podrás completar una especialización completa. Cuando llegues a nivel 20, podrás completar 2 especializacions completas. Estos puntos de habilidades se pueden resetear con [Reagan Pepper](https://eu.finalfantasyxiv.com/lodestone/playguide/db/item/102abc133a5/){:target="_blank" class="eorzeadb_link"}. Estos objetos se puede comprar por 20 Allied Seals o 48.000 Sellos de la Gran Compañía.
 
-![habilidades](/assets/images/articles/guias/chocobo/habilidades.jpg)
+<p align="center"><img src="/assets/images/articles/guias/chocobo/habilidades.jpg"></p>
 
 Por último, en la pestaña *Appearence* del menú Companion podrás cambiar la armadura de tu chocobo así como el color de sus plumas. Para cambiar el color deberás darle frutas cuando el chocobo esté en el establo con la opción Alimentar (*Feed* en inglés). Dependiendo de las frutas que le des y orden en que se las suministres el chocobo conseguirá un color y otro. Puedes darle todas las frutas en un solo paso y pasadas 24h desde que le alimentaste con la última fruta, el chocobo conseguirá el cambio de color. Estas 24h el chocobo debe estar en el establo. Para facilitar este proceso puedes usar la web [FFXIV Chocobo](https://ffxivchocobo.com/en){:target="_blank"}
 
-![apariencia](/assets/images/articles/guias/chocobo/apariencia.jpg)
+<p align="center"><img src="/assets/images/articles/guias/chocobo/apariencia.jpg"></p>
 
 Para cambiar la armadura del chocobo hay que conseguir unos objetos denominados **Bardas** (*Bardings* en inglés). Estos objetos se colocan en la cabeza, cuerpo y piernas del chocobo. Podrás conseguir las bardas mediante misiones, fabricación de objetos, logros, etc. Las bardas están diseñadas con una temática relacionada al contenido con la que la consigues. Por ejemplo, si consigues la barda con objetos que se obtienen en un jefe ésta tendrá una apariencia relacionada con el jefe.
 
-![barda](/assets/images/articles/guias/chocobo/barda.jpg)
+<p align="center"><img src="/assets/images/articles/guias/chocobo/barda.jpg"></p>
 
 Cuando ya tengamos desbloqueado nuestro compañero de batalla, tendremos acceso a la opción del menú *Character* de **Chocobo Saddlebag** (Ctrl+Shift+i por defecto). Estas alforjas nos dan 70 huecos más de inventario que podemos usar para guardar lo que nosotros queramos. Estas alforjas se puede abrir en todas las zonas, incluso cuando no podamos sacar a nuestro compañero de batalla.
 
-![alforjas](/assets/images/articles/guias/chocobo/alforjas.jpg)
+<p align="center"><img src="/assets/images/articles/guias/chocobo/alforjas.jpg"></p>
