--- a/_posts/2021-06-18-fashion210618.md
+++ b/_posts/2021-06-18-fashion210618.md
@@ -16,9 +16,9 @@ Una semana mas [Kaiyoko Star](https://twitter.com/kaiyokostar){:target="_blank"}
 
 Para hacer los 80 puntos de manera facil y ganar los 60,000 MGP :
 
-- En **cabeza cualquier pieza teñida** con <a href="https://eu.finalfantasyxiv.com/lodestone/playguide/db/item/0c0c7f94f09/" class="eorzeadb_link" target="_blank">Soot Black Dye </a>, el cual se puede hacer con una receta de nivel 30 de Carpenter, Blacksmith, Armorer, Goldsmith, Leatherworker, Weaver, Alchemist o Cullinarian, aunque tambien la podremos comprar el Tablón del Mercado (*Market Board* en inglés).
+- En **cabeza cualquier pieza teñida** con <a href="https://eu.finalfantasyxiv.com/lodestone/playguide/db/item/0c0c7f94f09/" class="eorzeadb_link" target="_blank">Soot Black Dye </a>, el cual se puede hacer con una receta de nivel 30 de Carpenter, Blacksmith, Armorer, Goldsmith, Leatherworker, Weaver, Alchemist o Cullinarian, aunque tambien la podremos comprar el Tablón del Mercado (*Market Board* en Inglés).
 - En las manos <a href="https://eu.finalfantasyxiv.com/lodestone/playguide/db/item/b6f5f824586/" class="eorzeadb_link" target="_blank">Gambler's Gloves</a>, unos guantes que podeis comprar a <a href="https://eu.finalfantasyxiv.com/lodestone/playguide/db/shop/c644e9a1b2b/?item=b6f5f824586&type=currency" class="eorzeadb_link" target="_blank">Gold Saucer Attendant</a> en **Gold Saucer** (X:5.1 Y:6.6) por **30.000 MGP**.
-- En **zapatos cualquier pieza teñida** con <a href="https://eu.finalfantasyxiv.com/lodestone/playguide/db/item/0c0c7f94f09/" class="eorzeadb_link" target="_blank">Soot Black Dye </a>, el cual se puede hacer con una receta de nivel 30 de Carpenter, Blacksmith, Armorer, Goldsmith, Leatherworker, Weaver, Alchemist o Cullinarian, aunque tambien la podremos comprar el Tablón del Mercado (*Market Board* en inglés).
+- En **zapatos cualquier pieza teñida** con <a href="https://eu.finalfantasyxiv.com/lodestone/playguide/db/item/0c0c7f94f09/" class="eorzeadb_link" target="_blank">Soot Black Dye </a>, el cual se puede hacer con una receta de nivel 30 de Carpenter, Blacksmith, Armorer, Goldsmith, Leatherworker, Weaver, Alchemist o Cullinarian, aunque tambien la podremos comprar el Tablón del Mercado (*Market Board* en Inglés).
 
 Recordar que teneis ademas que tener equipado un item en cada slot del equipo, a excepcion de off-hand.
 
