--- a/_posts/2021-06-05-juglar-02.md
+++ b/_posts/2021-06-05-juglar-02.md
@@ -9,6 +9,10 @@ description: "El Juglar Errante nos comportate el documental de Final Fantasy XI
 featured: false
 hidden: false
 ---
+En nuestras aventuras en Eorzea conocemos al Juglar Errante, el cual se encarga de relatar y cantar las historias mas importantes que pasan en nuestras aventuras por todo el reino. 
+
+En gaceta Eorzea hemos decidido tener nuestro propio Juglar el cual compartira con nosotros las historias que nuestros adventureros han compartido.
+
 Esta semana el Juglar Errante nos trae el video documental sobre Final Fantasy XIV que [noclip](https://www.patreon.com/noclip){:target="_blank"} realizo en 2017. Este documental trata de como de las cenizas del juego en su primera encarnacion se consiguio realizar A Realm Reborn.
 
 Este gran reportaje es uno de los mejores decoumentales que se han hecho sobre el tema y posiblemente una de las historias mas increibles del mundo de los videojuegos.
