--- a/_posts/2021-06-21-pass1uso.md
+++ b/_posts/2021-06-21-pass1uso.md
@@ -7,7 +7,7 @@ tags: [suscripciones, tarjeta, pago, tiempo de juego, añadir]
 image: assets/images/articles/guias/pass1uso/portada.jpg
 description: "Guía de como añadir un Autenticador a Final Fantasy XIV."
 featured: false
-hidden: false
+hidden: true
 ---
 Activar la protección de **Contraseña de 1 solo uso** en Final Fantasy XIV es importante para mantener tu cuenta segura de posibles incidencias y/o robos. Con está guía te enseñaremos a hacerlo de forma sencilla y ganarás en tranquilidad. 
 
