--- a/_posts/2021-06-22-resumen-5-57.md
+++ b/_posts/2021-06-22-resumen-5-57.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title:  "Resumen de las notas del parche 5.57"
+title:  "Resumen de las notas del parche 5.57."
 author: cecile
 categories: [ parches ]
 tags: [parches, shadowbringers, "5.55"]
@@ -12,42 +12,42 @@ hidden: false
 
 Este es un resumen de las principales puntos de las notas del parche 5.57, aunque os recomendamos revisar las notas completas en este [enlace](https://eu.finalfantasyxiv.com/lodestone/topics/detail/002b1272ea05351621ce21426d6ff42738e0b2cc){:target="_blank"}.
 
-### Ajuste a la incursion de Eden's Promise (Savage)
+### Ajuste a la incursión de *Eden's Promise (Savage)*.
 
-- Incrementado a **2** el numero de **cofres**, adicionalmente el **limite semanal de objetos** obtenidos ha sido **eliminado**.
-- El **limite** semanal de **acceso** a todas las areas ha sido **eliminado**.
-- Los jugadores recibiran el **poder del Echo** al entrar en la incursion aumentado su salud, daño y curacion un **10%**. *Al contrario que en otras instancias, el echo no aumentara en poder en el caso que todos los jugadores hayan sido incapacitados*
+- Incrementado a **2** el numero de **cofres**, adicionalmente el **límite semanal de objetos** obtenidos ha sido **eliminado**.
+- El **límite** semanal de **acceso** a todas las areas ha sido **eliminado**.
+- Los jugadores recibiran el **Poder del Echo** al entrar en la incursión aumentado su salud, daño y curación un **10%**. *Al contrario que en otras instancias, el echo no aumentara en poder en el caso que todos los jugadores hayan sido incapacitados*
 
 ### Ruletas de Incursiones de Alianza
 
-- Se ha **incluido** en la **ruleta** de incursiones de **Alianza** la incursion: **The Tower at Paradigm's Breach**.
+- Se ha **incluído** en la **ruleta** de incursiones de **Alianza** la incursión: **The Tower at Paradigm's Breach**.
 
 ### Ajustes a Bozjan southern front
 
-- Las **notas** de campo (*Field Notes en Ingles*) de **Dyunbu** ha sido **añadidas** como possible recompensa de las escaramuzas (*skirmishes en Ingles*) "**Brought to Heal**" y "**No Camping Allowed**."
-- Los **cofres** de "The Battle of **Castrum** Lacus Litore" otorgaran **mas forgotten fragments**.
-- La cantidad de **meritos (*mettle en Ingles*)** por completar "The Battle of **Castrum** Lacus Litore" ha sido **aumentada**.
-- **Reducido** el numero de **clusters necesarios, de 3 a 1**, para comprar los framentos de : **Clarity, Contention, Finesse, Fortitude y Divinity**.
-- **Aumentaddo** los **timeworn artifacts** recividos al completar **Delubrum** Reginae cuando estamos en la quest del arma **reliquia** : A New Path of Resistance.
+- Las **notas** de campo (*Field Notes en inglés*) de **Dyunbu** ha sido **añadidas** como posible recompensa de las escaramuzas (*skirmishes en inglés*) "**Brought to Heal**" y "**No Camping Allowed**".
+- Los **cofres** de "The Battle of **Castrum** Lacus Litore" otorgarán **más *forgotten fragments***.
+- La cantidad de **méritos (*mettle en inglés*)** por completar "*The Battle of ***Castrum*** Lacus Litore*" ha sido **aumentada**.
+- **Reducido** el número de **clusters necesarios, de 3 a 1**, para comprar los framentos de : ***Clarity, Contention, Finesse, Fortitude y Divinity***.
+- **Aumentado** los ***timeworn artifacts*** recibidos al completar ***Delubrum Reginae*** cuando estamos en la quest del arma **reliquia** : *A New Path of Resistance*.
 
-### Ajustes en los Allagan tomestones of revelation
+### Ajustes en los *Allagan tomestones of revelation*
 
-- El **limite semanal** de Allagan tomestones of **revelation** ha sido aumentado de **450 a 900**, el maximo total seguira siendo 2000. Recordamos que esta moneda se usa para obtener el **equipo 520** que es ademas upgradeable a 530.
+- El **límite semanal** de *Allagan tomestones of **revelation*** ha sido aumentado de **450 a 900**, el máximo total seguirá siendo 2000. Recordamos que esta moneda se usa para obtener el **equipo 520** que es además *upgradeable* a 530.
 
 ### Visitar Otro Servidor de Mundo
 
-La opcion visitar otro servidor del mundo, (*Visit Another World Server en Ingles*) ha sido añadida como sumenu en la pantalla de seleccion de personaje, permitiendo que podamos entrar al juego directamente en otro servidor.
+La opción visitar otro servidor del mundo, (*Visit Another World Server en inglés*) ha sido añadida como submenu en la pantalla de selección de personaje, permitiendo que podamos entrar al juego directamente en otro servidor.
 
 ![5.55 image]({{ site.baseurl }}/assets/images/articles/noticias/parche5_57/visit.png)
 
 <blockquote>
-Por favor considerar usa esta opcion cuando tengais problemas para conectar en vuestro servidor de origen, por ejemplo porque este congestionado. Esto sera muy interesante en la salida de parches o nuevas expansiones para ahorrarnos cola de entrada.
+Por favor considerar usa esta opción cuando tengáis problemas para conectar en vuestro servidor de origen, por ejemplo porque este congestionado. Esto será muy interesante en la salida de parches o nuevas expansiones para ahorrarnos cola de entrada.
 </blockquote>
 
 Sin embargo este sistema posee algunas restricciones:
 
-- No se puede elegir en que servidor entraras, se elijira uno de los que tengan espacio disponible automaticamente.
-- Los jugadores apareceran en la aetheryte de su ciudad de origen.
+- No se puede elegir en que servidor entrarás, se eligirá uno de los que tengan espacio disponible automáticamente.
+- Los jugadores aparecerán en la *aetheryte* de su ciudad de origen.
 - Este sistema no se puede usar en algunas condiciones, como por ejemplo al deslogearse realizando un contenido instanciado.
 
 
