--- a/_posts/2021-06-22-resumen-5-57.md
+++ b/_posts/2021-06-22-resumen-5-57.md
@@ -24,15 +24,15 @@ Este es un resumen de las principales puntos de las notas del parche 5.57, aunqu
 
 ### Ajustes a Bozjan southern front
 
-- Las **notas** de campo (*Field Notes en inglés*) de **Dyunbu** ha sido **añadidas** como posible recompensa de las escaramuzas (*skirmishes en inglés*) "**Brought to Heal**" y "**No Camping Allowed**".
-- Los **cofres** de "The Battle of **Castrum** Lacus Litore" otorgarán **más *forgotten fragments***.
-- La cantidad de **méritos (*mettle en inglés*)** por completar "*The Battle of ***Castrum*** Lacus Litore*" ha sido **aumentada**.
+- Las **notas** de campo (*Field Notes en inglés*) de **Dyunbu** ha sido **añadidas** como posible recompensa de las escaramuzas (*skirmishes en inglés*) **Brought to Heal** y **No Camping Allowed**.
+- Los **cofres** de *The Battle of* ***Castrum*** *Lacus Litore* otorgarán **más** ***forgotten fragments***.
+- La cantidad de **méritos (*mettle en inglés*)** por completar *The Battle of* ***Castrum*** *Lacus Litore* ha sido **aumentada**.
 - **Reducido** el número de **clusters necesarios, de 3 a 1**, para comprar los framentos de : ***Clarity, Contention, Finesse, Fortitude y Divinity***.
-- **Aumentado** los ***timeworn artifacts*** recibidos al completar ***Delubrum Reginae*** cuando estamos en la quest del arma **reliquia** : *A New Path of Resistance*.
+- **Aumentado** los ***timeworn artifacts*** recibidos al completar ***Delubrum*** *Reginae* cuando estamos en la quest del arma **reliquia** : *A New Path of Resistance*.
 
 ### Ajustes en los *Allagan tomestones of revelation*
 
-- El **límite semanal** de *Allagan tomestones of **revelation*** ha sido aumentado de **450 a 900**, el máximo total seguirá siendo 2000. Recordamos que esta moneda se usa para obtener el **equipo 520** que es además *upgradeable* a 530.
+- El **límite semanal** de *Allagan tomestones of* ***revelation*** ha sido aumentado de **450 a 900**, el máximo total seguirá siendo 2000. Recordamos que esta moneda se usa para obtener el **equipo 520** que es además *upgradeable* a 530.
 
 ### Visitar Otro Servidor de Mundo
 
@@ -41,7 +41,7 @@ La opción visitar otro servidor del mundo, (*Visit Another World Server en ingl
 ![5.55 image]({{ site.baseurl }}/assets/images/articles/noticias/parche5_57/visit.png)
 
 <blockquote>
-Por favor considerar usa esta opción cuando tengáis problemas para conectar en vuestro servidor de origen, por ejemplo porque este congestionado. Esto será muy interesante en la salida de parches o nuevas expansiones para ahorrarnos cola de entrada.
+Esta opción se puede tener en cuenta cuando tengáis problemas para conectar en vuestro servidor de origen, como por ejemplo cuando está lleno. Esto será muy interesante en la salida de parches o nuevas expansiones para ahorrarnos la cola de entrada.
 </blockquote>
 
 Sin embargo este sistema posee algunas restricciones:
