--- a/_posts/2021-06-22-resumen-5-57.md
+++ b/_posts/2021-06-22-resumen-5-57.md
@@ -18,11 +18,11 @@ Este es un resumen de las principales puntos de las notas del parche 5.57, aunqu
 - El **límite** semanal de **acceso** a todas las areas ha sido **eliminado**.
 - Los jugadores recibiran el **Poder del Echo** al entrar en la incursión aumentado su salud, daño y curación un **10%**. *Al contrario que en otras instancias, el echo no aumentara en poder en el caso que todos los jugadores hayan sido incapacitados*
 
-### Ruletas de Incursiones de Alianza
+### Ruletas de Incursiones de Alianza.
 
 - Se ha **incluído** en la **ruleta** de incursiones de **Alianza** la incursión: **The Tower at Paradigm's Breach**.
 
-### Ajustes a Bozjan southern front
+### Ajustes a Bozjan southern front.
 
 - Las **notas** de campo (*Field Notes en inglés*) de **Dyunbu** ha sido **añadidas** como posible recompensa de las escaramuzas (*skirmishes en inglés*) **Brought to Heal** y **No Camping Allowed**.
 - Los **cofres** de *The Battle of* ***Castrum*** *Lacus Litore* otorgarán **más** ***forgotten fragments***.
@@ -34,7 +34,7 @@ Este es un resumen de las principales puntos de las notas del parche 5.57, aunqu
 
 - El **límite semanal** de *Allagan tomestones of* ***revelation*** ha sido aumentado de **450 a 900**, el máximo total seguirá siendo 2000. Recordamos que esta moneda se usa para obtener el **equipo 520** que es además *upgradeable* a 530.
 
-### Visitar Otro Servidor de Mundo
+### Visitar Otro Servidor de Mundo.
 
 La opción visitar otro servidor del mundo, (*Visit Another World Server en inglés*) ha sido añadida como submenu en la pantalla de selección de personaje, permitiendo que podamos entrar al juego directamente en otro servidor.
 
@@ -49,5 +49,3 @@ Sin embargo este sistema posee algunas restricciones:
 - No se puede elegir en que servidor entrarás, se eligirá uno de los que tengan espacio disponible automáticamente.
 - Los jugadores aparecerán en la *aetheryte* de su ciudad de origen.
 - Este sistema no se puede usar en algunas condiciones, como por ejemplo al deslogearse realizando un contenido instanciado.
-
-
