--- a/_posts/2021-06-28-encuesta.md
+++ b/_posts/2021-06-28-encuesta.md
@@ -5,12 +5,12 @@ author: cecile
 categories: [ lore ]
 tags: [multimedia, video, lore]
 image: assets/images/articles/encuestas/profesiones/xiv.jpg
-description: "Encuesta de las profesiones preferidas de Fintal Fantasy XIV."
+description: "Encuesta sobre las profesiones preferidas de Fintal Fantasy XIV."
 featured: false
 hidden: false
 ---
 
-Hace unos dias planteamos una [encuesta en twitter](https://twitter.com/GacetaEorzea/status/1406553074886455297){:target="_blank"} sobre vuestras profesiones preferidas en Final Fnatasy XIV, ahora vamos a compartir los resultados.
+Hace unos días planteamos una [encuesta en twitter](https://twitter.com/GacetaEorzea/status/1406553074886455297){:target="_blank"} sobre vuestras **profesiones** preferidas en **Final Fnatasy XIV**, ahora vamos a compartir los resultados.
 
 <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 
@@ -69,7 +69,7 @@ if (grTankes) {
 }
 </script>
 
-Como vemos la mayoria de nuestros jugadores se decartan por **Paladin o Warrior**, los tankes tradicionales desde A Realm Reborn, y aunque podemos decir que hay bastante jugadores de las otras profesiones sin duda la gente prefiere el valor seguro que los tradicionales proporcionan.
+Como vemos la mayoría de nuestros jugadores se decantan por ***Paladin*** o ***Warrior***, los tankes tradicionales desde ***A Realm Reborn***, y aunque podemos decir que hay bastante jugadores de las otras profesiones sin duda la gente prefiere el valor seguro que los tradicionales proporcionan.
 
 
 ### Sanadores
